Add simple endpoint for stats
url - `stats/reviewers/assignments?active_only&status=open`
